--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+ 
+  "start:prod": "node --max-old-space-size=512 dist/main.js"
+
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
