added docker file for deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,40 @@
-# Use a Node.js image
-FROM node:18
+# Use Node.js as the base image
+FROM node:18 as build
 
-# Set working directory inside container
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json first (for better caching)
-COPY package*.json ./
+# Copy backend folder into container
+COPY ./backend ./backend
+
+# Change directory into backend
+WORKDIR /app/backend
 
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the app
-COPY . .
-
 # Build the NestJS project
 RUN npm run build
 
-# Expose the port Nest uses
+# ---------------------------
+
+# Start a new container with just the built app
+FROM node:18
+
+# Set working directory
+WORKDIR /app
+
+# Copy built files from previous stage
+COPY --from=build /app/backend /app
+
+# Install only production deps
+RUN npm install --only=production
+
+# Set environment variables (optional)
+ENV PORT=3000
+
+# Expose the port
 EXPOSE 3000
 
-# Run the app
-CMD ["node", "dist/main.js"]
+# Start the app
+CMD ["node", "dist/main"]
